...
    "pinMismatch": "Incorrect PIN!",
    "pinSetup": "You can optionally setup a PIN to secure your app.",
    "pleaseConfirm": "Please confirm your PIN.",
    "pleaseConfirmNewPin": "Please confirm your new PIN.",
    "pleaseEnter": "Please enter your PIN now.",
...
    "accept": "Accept",
    "amount": "Amount",
    "back": "Back",
    "backToDashboard": "Back to dashboard",
    "balance": "Balance",
    "balanceAfterTX": "Mint balance after TX",
    "balTooLow": "Balance too low",
...
    "contact": "Contact",
    "mintDelErr": "Unable to remove a mint with remaining balance",
    "continue": "Continue",
    "copied": "Copied",
    "shareInvoice": "Share invoice",
    "copyToken": "Copy token",
    "createInvoice": "Create invoice",
    "createToken": "Create Token",
    "createTokenErr": "Could not create a cashu token. Please try again later.",
...
    "estimateFee": "Estimate fee",
    "expired": "Expired",
    "fee": "Fee",
    "swapFee": "Swap fee",
    "feeErr": "Unable to estimate fee. Is \"{{input}}\" a valid LNURL?",
...
    "invalidOrSpent": "Token invalid or already claimed",
    "invalidToken": "Invalid token",
    "invoice": "Invoice",
    "invoiceExpired": "Invoice expired",
    "invoiceInclFee": "Invoice incl. fee",
...
    "noCurrenciesAvailable": "No currencies available. Please retry loading exchange rates.",
    "retry": "Retry",
    "lnInvoice": "Lightning invoice",
    "lnPayment": "Lightning payment",
    "mint": "Mint",
...
    "save": "Save",
    "scanAgain": "Scan Again",
    "scan": "Scan",
    "scanQR": "Scan QR",
    "qrScanHint": "Place the QR code inside the frame",
...
    "wallet": "Wallet",
    "willDoLater": "Will do later",
    "yes": "Yes",
    "invalidPubKey": "Invalid public key!",
    "walletLocked": "Wallet locked",
...
    "contactsNostr": "Contacts & Nostr",
    "nostrExplainer": "The Nostr implementation enables seamless synchronization of your contacts without the need for you to enter your private key, as we generate a new one for you. Your data is displayed using the public key, while the new private key encrypts/decrypts your messages.",
    "send": "Send",
    "sendEcashDashboard": "Create a Cashu token and send it to anyone.",
    "payInvoiceDashboard": "Send your funds to a Lightning node.",
...
    "oneHrAgo": "1 hour ago",
    "oneMinAgo": "1 minute ago",
    "paymentHash": "Payment hash",
    "settleTime": "Settle time",
    "showQr": "Show QR code",
    "receive": "Receive",
    "send": "Send",
    "melt": "Melt",
...
    "addCustomName": "Add a custom name",
    "additionalInfo": "Additional information",
    "addMintBtn": "Add mint",
    "addNewMint": "Add a new mint",
    "atLeast2Mints": "You need at least 2 mints to perform an multimint-swap.",
    "awaitingInvoice": "Awaiting invoice",
...
    "trustMintSure": "Trust this mint?",
    "updatedDefault": "Updated the default mint",
    "newMintAdded": "Mint added!",
    "newMintAddedQuestion": "Do you want to receive Ecash now?",
    "selectSwapReceiver": "Select a mint as the payment receiver.",
...
    "language": "Language",
    "currency": "Currency",
    "mintSettings": "Mint management",
    "nfcSettings": "NFC Settings",
    "npcSettingsTitle": "Lightning address",
...
