...
		})
		return focusHandler
	}, [navigation])

	return (
		<View style={[styles.container, { backgroundColor: color.BACKGROUND }]}>
			<TopNav screenName='Mints' nav={{ navigation, route }} />
			<View style={styles.topSection}>
				{/* Mints list where test mint is always visible */}
				<View style={[
					globals(color).wrapContainer,
					{
						paddingHorizontal: 0,
...
			<MyModal type='bottom' animation='slide' visible={newMintModal && !prompt.open}>
				<Text style={globals(color).modalHeader}>
					Add a new mint
				</Text>
				<TextInput
					style={[globals(color).input, { marginBottom: 20 }]}
					placeholder="Mint URL"
					placeholderTextColor={color.INPUT_PH}
					selectionColor={hi[highlight]}
					onChangeText={setInput}
				/>
				<Button txt='Add mint' onPress={() => { void handleMintInput() }} />
				<TouchableOpacity style={styles.cancel} onPress={() => setNewMintModal(false)}>
...
